feat: add `hideHeaderInTOC` and `hideSidebar`

--- a/src/example.html
+++ b/src/example.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mazey's Test.</title>
+  <title>mazey-wordpress-utils</title>
   <style></style>
 </head>
 <body>
     <div class="container">
       <div class="box">
-        <span>Box</span>
+        <span>mazey-wordpress-utils Box</span>
       </div>
     </div>
 </body>
